# cgat-core

./: .codecov.yml  .gitignore  .travis.yml  404.html  CGATCore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  THANKS.txt  all-tests.sh  conda_requires.txt  index.html  install-CGAT-tools.sh  install.sh  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  requirements.txt  requires.txt  setup.cfg  setup.py
.github/workflows/: cgatcore_python.yml  release.yaml
CGATCore/: CSV2DB.py  Database.py  Experiment.py  IOTools.py  Requirements.py  Table.py  Tables.py
CGATCore/Pipeline/: Cluster.py  Control.py  Database.py  Execution.py  Files.py  Local.py  Parameters.py  Utils.py  __init__.py  farm.py  run_function.py
cgatcore/: CSV.py  CSV2DB.py  Database.py  Experiment.py  IOTools.py  Logfile.py  Table.py  Tables.py  __init__.py  csv2db.py  csvutils.py  database.py  experiment.py  iotools.py  logfile.py  table.py  tables.py
cgatcore/Pipeline/: Cluster.py  Control.py  Files.py  farm.py
cgatcore/pipeline/: Cluster.py  Execution.py  Files.py  Parameters.py  __init__.py  app_name_filter.py  base_executor.py  cluster.py  control.py  database.py  execution.py  executors.py  farm.py  files.py  kubernetes.py  logging_utils.py  parameters.py  paramters.py  run_function.py  utils.py  verification.py  wrappers.py
cgatcore/remote/: __init__.py  abstract.py  aws.py  azure.py  file_handler.py  ftp.py  google_cloud.py  sftp.py
conda/environments/: cgat-core.yml  core-devel-template.yml  core-devel.yml  core-production-template.yml  core-production.yml  readthedocs.yml
container/tasks/: index.html
container/whole_pipeline/: index.html
defining_workflow/run_parameter/: index.html
defining_workflow/tutorial/: index.html
defining_workflow/writing_workflows/: index.html
docs/: #index.rst#  Makefile  Running.rst  conf.py  index.md  index.rst
docs/container/: tasks.md  whole_pipeline.md
docs/function_doc/: Core.rst  (+9 more)
docs_readthedocs/: Makefile  conf.py  release.rst
overrides/: main.html
remotes/: AWS.py
scripts/: cgat_check_deps.py  cgat_conda_deps.sh  conda.py  match_conda_deps.sh
search/: search_index.json
stylesheets/: extra.css
tests/: mocks.py  template.yml  template_pipeline.py  test_container.py  test_container_config.py  test_execution_cleanup.py  test_experiment.py  test_import.py  test_iotools.py  test_pipeline_actions.py  test_pipeline_cli.py  test_pipeline_cluster.py  test_pipeline_control.py  test_pipeline_execution.py  test_pipeline_executors.py  test_s3_decorators.py  test_style.py
(+137 files in other folders)
