[build-system]
requires = ["setuptools>=1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cgatcore"
version = "0.6.19"
description = "cgatcore: the Computational Genomics Analysis Toolkit"
authors = [
    { name = "Adam Cribbs", email = "adam.cribbs@ndorms.ox.ac.uk" }
]
license = { text = "MIT" }
keywords = ["computational genomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
readme = "README.md"

[project.urls]
Documentation = "https://github.com/cgat-developers/cgat-core"
Source = "https://github.com/cgat-developers/cgat-core"
Tracker = "https://github.com/cgat-developers/cgat-core/issues"
Homepage = "https://github.com/cgat-developers/cgat-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["cgatcore", "cgatcore.pipeline", "cgatcore.remote"]

[project.optional-dependencies]
testing = ["pytest"]  # include your testing dependencies
